<resources>
    <string name="app_name">Grad Planner Lite</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_info">Update Information</string>
    <string name="title_activity_my_acc_info">My Acc</string>
    <string name="lblName">Name:</string>
    <string name="lblDOB">DOB:</string>
    <string name="lblEmail">Email:</string>
    <string name="lblPhone">Phone:</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnEdit">Edit</string>
    <string name="title_activity_degree_info">Degree</string>
    <string name="lblDegree">Degree:</string>
    <string name="lblMajor">Major:</string>
    <string name="lblSpec">Specialization:</string>
    <string name="myAcc">my acc</string>
    <string name="degree">degree</string>
    <string name="courses">courses</string>
    <string name="seminar">seminar</string>
    <string name="misc">miscellaneous</string>
    <string name="status">status</string>
    <string name="title_activity_seminar">Seminar</string>
    <string name="semAdd">Add</string>
    <string name="semRem">Remove</string>
    <string name="semView">View</string>
    <string name="msgSemAdded">Seminar added</string>
    <string name="msgSemRemoved">Seminar removed</string>
    <string name="title_activity_view_seminar">Seminars</string>
    <string name="title_activity_misc">Miscellaneous</string>
    <string name="btnMiscAdd">+</string>
    <string name="btnMiscRem">-</string>
    <string name="btnMiscEdit">edit</string>
    <string name="btnMiscCheck">check</string>
    <string name="title_activity_courses">Courses</string>
    <string name="btnCoursesAdd">+</string>
    <string name="btnCoursesRem">-</string>
    <string name="btnCoursesEdit">edit</string>
    <string name="btnCoursesCheck">check</string>
    <string name="title_activity_status">Status</string>
    <string name="lblCourPend">Courses pending:</string>
    <string name="lblSemPend">Seminars pending:</string>
    <string name="lblOtherPend">Other:</string>
</resources>
