<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Misc"
    tools:showIn="@layout/activity_misc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btnMiscAdd"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnMiscAdd"
            android:onClick="onClickMiscAddBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnMiscRem"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnMiscRem"
            android:onClick="onClickMiscRemBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnMiscEdit"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnMiscEdit"
            android:onClick="onClickMiscEditBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnMiscCheck"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnMiscCheck"
            android:onClick="onClickMiscCheckBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/MiscRadioGrp"
        android:layout_below="@+id/linearLayout">
    </RadioGroup>
</RelativeLayout>
