<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csc510.gradplannerlite.Courses"
    tools:showIn="@layout/activity_courses">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btnCoursesAdd"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnCoursesAdd"
            android:onClick="onClickCoursesAddBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnCoursesRem"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnCoursesRem"
            android:onClick="onClickCoursesRemBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnCoursesEdit"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnCoursesEdit"
            android:onClick="onClickCoursesEditBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnCoursesCheck"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:ems="10"
            android:text="@string/btnCoursesCheck"
            android:onClick="onClickCoursesCheckBtn"
            android:background="#ff0000"
            android:textSize="25sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/CoursesRadioGrp"
        android:layout_below="@+id/linearLayout">
    </RadioGroup>
</RelativeLayout>
