<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Degree"
    tools:showIn="@layout/activity_degree_info">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ff0000">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDegree"
            android:textSize="28sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:orientation="horizontal"
        android:background="#ff0000">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textSize="28sp"
            android:id="@+id/spinnerDegree" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop = "20dp"
        android:background="#ff0000">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMajor"
            android:textSize="28sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:orientation="horizontal"
        android:background="#ff0000">

        <EditText
            android:id="@+id/txtMajor"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop = "20dp"
        android:background="#ff0000">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSpec"
            android:textSize="28sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:orientation="horizontal"
        android:background="#ff0000">

        <EditText
            android:id="@+id/txtSpec"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDegSubmit"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="@string/btnSubmit"
            android:onClick="onClickDegSubmitBtn"
            android:background="#ff0000"
            android:textSize="28sp"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btnDegEdit"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="@string/btnEdit"
            android:onClick="onClickEditBtn"
            android:background="#ff0000"
            android:textSize="28sp"
            android:textColor="#ffffff" />
        </LinearLayout>
</LinearLayout>
